--- a/css/main.css
+++ b/css/main.css
@@ -987,6 +987,7 @@ footer a:hover {
 
 .distro {
   border-bottom: 2px solid #cccccc;
+  padding-bottom: 1em;
 }
 
 .distro:last-child {
@@ -1012,7 +1013,6 @@ footer a:hover {
   top: 0;
   font-size: 12px;
   height: 40px;
-  border-bottom: 2px solid black;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
